# Fullstack-webgame-5S

./: .gitignore  CLAUDE.md  IA_LOG.md  LICENSE  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  dtos.py  hub.py
backend/app/domain/: __init__.py  content.py  decay.py  engine.py  i18n.py  plausibility.py  scoring.py  sensos.py  situacoes.py  state.py
backend/app/persistence/: __init__.py  serial.py  store.py
backend/app/seed/: situacoes-5s-gabarito.json
backend/tests/: test_api.py  test_domain.py  test_i18n.py
frontend/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/coverage/: index.html
frontend/coverage/src/: index.html  types.ts.html
frontend/coverage/src/api/: client.ts.html  index.html  useGameStream.ts.html
frontend/coverage/src/app/: App.tsx.html  GameScreen.tsx.html  HallScreen.tsx.html  Onboarding.tsx.html  ResetButton.tsx.html  (+2 more)
frontend/src/: index.css  main.tsx  types.ts
frontend/src/api/: client.test.ts  client.ts  useGameStream.ts
frontend/src/app/: App.tsx  GameScreen.tsx  HallScreen.tsx  Onboarding.tsx  ResetButton.test.tsx  ResetButton.tsx  StartScreen.test.tsx  StartScreen.tsx
frontend/src/game/: Hud.tsx  PhaseIntroOverlay.test.tsx  PhaseIntroOverlay.tsx  sensoInfo.ts
frontend/src/i18n/: i18n.test.ts  index.ts
frontend/src/store/: gameStore.test.ts  gameStore.ts
frontend/src/ui/: Button.tsx  Confetti.tsx
(+41 files in other folders)
